# mindclub_dp_stat

./: .gitignore  Dockerfile  README.md  csv_to_png.py  docker-compose.yml  pyproject.toml
mindclub_dp_stat/: manage.py
mindclub_dp_stat/gamesapp/: models.py
mindclub_dp_stat/mindclub_dp_stat/: asgi.py  settings.py  urls.py  wsgi.py
mindclub_dp_stat/mindclubapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mindclub_dp_stat/mindclubapp/migrations/: 0001_initial.py
mindclub_dp_stat/mindclubapp/templates/mindclubapp/: base.html  gametype.html  index.html  season.html
