[tool.poetry]
name = "mindclub-dp-stat"
version = "0.1.0"
description = "web app for quiz stat"
authors = ["Андрій <andrey.maybrodskyy@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mindclub_dp_stat"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
